[project]
name = "cliff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.23"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.9.4",
    "pygame>=2.6.1",
    "tqdm>=4.67.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "pytorch-triton-xpu>=3.3.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.6.1",
    "swig>=4.4.0",
    "box2d-py>=2.3.8",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

